--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^2.2.2",
-    "aws-amplify": "^4.3.14",
+    "@aws-amplify/ui-react": "^3.2.1",
+    "aws-amplify": "^4.3.29",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rooks": "^5.11.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
